--- a/src/main/resources/templates/CargoBillPage/Shipping.html
+++ b/src/main/resources/templates/CargoBillPage/Shipping.html
@@ -607,7 +607,8 @@
 
 
                             <form class="form-horizontal" id="basic-form">
-
+                                <!--隐藏的ID 输入框，有值后台会自动判断进行更新-->
+                                <input type="hidden" name="id" id="hiddenid"  class="form-control">
                                 <div class="form-group row">
                                     <label class="col-sm-2 col-form-label" for="example-email">销售价/吨</label>
                                     <div class="col-sm-10">
@@ -661,8 +662,8 @@
 <script src="/yiyuan/static/assets/js/axios.min.js"></script>
 <!--QS-->
 <!--<script src="https://cdn.bootcss.com/qs/6.7.0/qs.min.js"></script>-->
-
-
+<!-- Vendor js -->
+<script src="/yiyuan/static/assets/js/vendor.min.js"></script>
 <script>
 
     //QS数据处理配置
@@ -692,7 +693,7 @@
                     app.performDateList = response.data;
 
                     if(response.data.success === true){
-                        alert("新增成功");
+                        alert("操作成功");
                         //重定向到列表页
                         window.location.replace("/yiyuan/CargoBillPage/list.html");
                     }
@@ -719,9 +720,11 @@
     //============ ajax接口调用方法区 ====================
     //===== 页面加载后执行 start=====
     $(function () {
-var shippingId=GetRequest();
-console.log("============================")
-    })
+        var dataObj = GetRequest();
+        console.log("============================")
+        console.log(dataObj)
+        $("#hiddenid").val(dataObj.id);
+    });
 
 
     //===== 页面加载后执行 end=====
@@ -775,8 +778,7 @@ console.log("============================")
 </script>
 
 
-<!-- Vendor js -->
-<script src="/yiyuan/static/assets/js/vendor.min.js"></script>
+
 
 <!-- App js -->
 <script src="/yiyuan/static/assets/js/app.min.js"></script>
