--- a/src/main/resources/templates/CargoBillPage/list.html
+++ b/src/main/resources/templates/CargoBillPage/list.html
@@ -641,7 +641,6 @@
             elem: '#demo'//表格ID
             ,toolbar: '#toolbarDemo' //工具栏ID
             ,height: 'full-280' //高
-            ,cellMinWidth: 120 //全局定义常规单元格的最小宽度
             ,url: '/yiyuan/CargoBill/getInfoListPage' //数据接口
             ,defaultToolbar: ['filter']//数据表格 头部工具栏右侧图标
             ,method: 'post' //请求方式
@@ -678,7 +677,6 @@
             ,limits: [10,20,30]
             ,cols: [ [ //表头
                 { field: "state", checkbox: true,  width: '4%', align: 'center'}
-                ,{field: 'id', title: 'id'}
                 ,{field: 'departureLocation', title: '出发'}
                 ,{field: 'arrivedLocation', title: '到达'}
                 ,{field: 'goodsName', title: '货物名称'}
@@ -693,11 +691,12 @@
                 ,{field: 'goodsNumber', title: '吨数'}
                 ,{field: 'goodsUnitPrice', title: '料款/吨'}
                 ,{field: 'goodsFreight', title: '运费/吨'}
-                ,{field: 'goodsTime', title: '购进时间' ,templet: function (item) {
-                     return   item.goodsTime
+                ,{field: 'goodsTime', title: '购进时间' , templet: function (item) {
+                     //字符串截取,只要年月日
+                     return item.goodsTime.slice(0,10);
                  }}
                 , { field: '', title: '成本总价',  templet: function (item) {
-                      return   (item.goodsUnitPrice +item.goodsFreight) * item.goodsFreight
+                      return  (item.goodsUnitPrice +item.goodsFreight) * item.goodsFreight
                 }}
                 ,{field: 'whetherToShip', title: '是否出货',templet: function (item) {
                     if (item.whetherToShip == '0') {
@@ -708,7 +707,14 @@
                         return "未定义";
                     }
                  }}
-                ,{field: 'shippingTime', title: '出货时间'}
+                ,{field: 'shippingTime', title: '出货时间', templet: function (item) {
+                        if(item.shippingTime != null){
+                            //字符串截取,只要年月日
+                            return item.shippingTime.slice(0,10);
+                        }else{
+                            return "无";
+                        }
+                 }}
                 ,{field: 'sellingPrice', title: '销售价/吨'}
                 ,{fixed: 'right', title:'操作', toolbar: '#barDemo',align:'center'}
 
