--- a/src/main/resources/templates/CargoBillPage/list.html
+++ b/src/main/resources/templates/CargoBillPage/list.html
@@ -35,9 +35,6 @@
         <ul class="list-unstyled topnav-menu float-right mb-0">
 
             <li class="dropdown d-none d-lg-block">
-                <a class="nav-link dropdown-toggle mr-0 waves-effect waves-light" data-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
-                    <img src="/yiyuan/static/assets/images/flags/us.jpg" alt="user-image" class="mr-1" height="12"> <span class="align-middle">English <i class="mdi mdi-chevron-down"></i> </span>
-                </a>
                 <div class="dropdown-menu dropdown-menu-right">
 
                     <!-- item-->
@@ -84,11 +81,6 @@
                     <div class="slimscroll noti-scroll">
 
                         <!-- item-->
-                        <a href="javascript:void(0);" class="dropdown-item notify-item active">
-                            <div class="notify-icon"><img src="/yiyuan/static/assets/images/users/avatar-1.jpg" class="img-fluid rounded-circle" alt="" /> </div>
-                            <p class="notify-details">Sandra Smith<small class="text-muted">Hey ! I'm working on your project</small></p>
-                        </a>
-
                     </div>
 
                     <!-- All-->
@@ -138,12 +130,12 @@
             </li>
 
             <li class="dropdown notification-list">
-                <a class="nav-link dropdown-toggle nav-user mr-0 waves-effect waves-light" data-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
+             <!--   <a class="nav-link dropdown-toggle nav-user mr-0 waves-effect waves-light" data-toggle="dropdown" href="#" role="button" aria-haspopup="false" aria-expanded="false">
                     <img src="/yiyuan/static/assets/images/users/avatar-1.jpg" alt="user-image" class="rounded-circle">
                     <span class="pro-user-name ml-1">
                                 Devid <i class="mdi mdi-chevron-down"></i> 
                             </span>
-                </a>
+                </a>-->
                 <div class="dropdown-menu dropdown-menu-right profile-dropdown ">
                     <!-- item-->
                     <div class="dropdown-item noti-title">
@@ -203,12 +195,12 @@
                     </div>
                 </a>
             </li>
-            <li class="app-search d-none d-md-block">
+           <!-- <li class="app-search d-none d-md-block">
                 <form class="form-inline">
                     <input type="text" class="form-control" placeholder="Search…">
                     <button class="btn btn-primary-color" type="submit"><i class="fa fa-search"></i></button>
                 </form>
-            </li>
+            </li>-->
         </ul>
     </div>
     <!-- end Topbar -->
@@ -223,281 +215,20 @@
 
                 <ul class="metismenu" id="side-menu">
 
-
-                    <div class="left-user">
-                        <div class="user-box">
-                            <div class="user-img">
-                                <img src="/yiyuan/static/assets/images/users/avatar-1.jpg" alt="user-img" title="Mat Helme" class="rounded-circle img-fluid">
-                                <a href="javascript:void(0);" class="user-edit"><i class="mdi mdi-pencil"></i></a>
-                            </div>
-
-                            <h5><a href="javascript: void(0);">Devid Stanberry</a> </h5>
-                            <p class="text-muted mb-0"><small>Main Admin</small></p>
-                        </div>
-                    </div>
-
-                    <li>
-                        <a href="index.html">
-                            <i class="dripicons-device-desktop"></i>
-                            <span> Dashboard </span>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="javascript: void(0);">
-                            <i class="dripicons-view-apps"></i>
-                            <span> Layouts </span>
-                            <span class="menu-arrow"></span>
-                        </a>
-                        <ul class="nav-second-level" aria-expanded="false">
-                            <li>
-                                <a href="layouts-dark-header.html">Dark Header</a>
-                            </li>
-                            <li>
-                                <a href="layouts-sidebar-collapsed.html">Sidebar Collapsed</a>
-                            </li>
-                            <li>
-                                <a href="layouts-dark-sidebar.html">Dark Sidebar</a>
-                            </li>
-                            <li>
-                                <a href="layouts-small-sidebar.html">Small Sidebar</a>
-                            </li>
-                            <li>
-                                <a href="layouts-boxed.html">Boxed Layout</a>
-                            </li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <a href="calendar.html">
-                            <i class="dripicons-calendar"></i> <span> Calendar </span>
-                        </a>
-                    </li>
-
-                    <li>
-                        <a href="javascript: void(0);">
-                            <i class="dripicons-inbox"></i>
-                            <span> Email </span>
-                            <span class="menu-arrow"></span>
-                        </a>
-                        <ul class="nav-second-level" aria-expanded="false">
-                            <li>
-                                <a href="email-inbox.html">Inbox</a>
-                            </li>
-                            <li>
-                                <a href="email-read.html">Read Email</a>
-                            </li>
-                            <li>
-                                <a href="email-compose.html">Compose Email</a>
-                            </li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <a href="javascript: void(0);">
-                            <i class="dripicons-briefcase"></i>
-                            <span> UI Elements </span>
-                            <span class="menu-arrow"></span>
-                        </a>
-                        <ul class="nav-second-level" aria-expanded="false">
-                            <li>
-                                <a href="ui-typography.html">Typography</a>
-                            </li>
-                            <li>
-                                <a href="ui-buttons.html">Buttons</a>
-                            </li>
-                            <li>
-                                <a href="ui-notifications.html">Notifications</a>
-                            </li>
-                            <li>
-                                <a href="ui-cards.html">Cards</a>
-                            </li>
-                            <li>
-                                <a href="ui-modals.html">Modals</a>
-                            </li>
-                            <li>
-                                <a href="ui-grid.html">Grid</a>
-                            </li>
-                            <li>
-                                <a href="ui-checkbox-radio.html">Checkbox & Radio</a>
-                            </li>
-                            <li>
-                                <a href="ui-general.html">General</a>
-                            </li>
-                            <li>
-                                <a href="ui-progress.html">Progress</a>
-                            </li>
-                            <li>
-                                <a href="ui-tabs.html">Tabs & Accordions</a>
-                            </li>
-                            <li>
-                                <a href="ui-sweetalerts.html">Sweet Alerts</a>
-                            </li>
-                            <li>
-                                <a href="ui-ribbons.html">Ribbons</a>
-                            </li>
-                            <li>
-                                <a href="ui-range-slider.html">Range Slider</a>
-                            </li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <a href="javascript: void(0);">
-                            <i class="dripicons-graph-pie"></i>
-                            <span> Charts </span>
-                            <span class="menu-arrow"></span>
-                        </a>
-                        <ul class="nav-second-level" aria-expanded="false">
-                            <li>
-                                <a href="chart-chartjs.html">Chartjs Charts</a>
-                            </li>
-                            <li>
-                                <a href="chart-flot.html">Flot Charts</a>
-                            </li>
-                            <li>
-                                <a href="chart-chartist.html">Chartist Charts</a>
-                            </li>
-                            <li>
-                                <a href="chart-knob.html">Jquery Knob</a>
-                            </li>
-                            <li>
-                                <a href="chart-sparkline.html">Sparkline Charts</a>
-                            </li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <a href="javascript: void(0);">
-                            <i class="dripicons-document"></i>
-                            <span> Forms </span>
-                            <span class="menu-arrow"></span>
-                        </a>
-                        <ul class="nav-second-level" aria-expanded="false">
-                            <li>
-                                <a href="form-elements.html">Form Elements</a>
-                            </li>
-                            <li>
-                                <a href="form-advanced.html">Form Advanced</a>
-                            </li>
-                            <li>
-                                <a href="form-validation.html">Form Validation</a>
-                            </li>
-                            <li>
-                                <a href="form-wizard.html">Form Wizard</a>
-                            </li>
-                            <li>
-                                <a href="form-upload.html">Form Upload</a>
-                            </li>
-                            <li>
-                                <a href="form-summernote.html">Summernote</a>
-                            </li>
-                        </ul>
                     </li>
 
                     <li>
                         <a href="javascript: void(0);">
                             <i class="dripicons-view-list"></i>
-                            <span> Tables </span>
+                            <span> 货运单 </span>
                             <span class="menu-arrow"></span>
                         </a>
                         <ul class="nav-second-level" aria-expanded="false">
                             <li>
-                                <a href="tables-basic.html">Basic Tables</a>
+                                <a href="form.html">新增货运单</a>
                             </li>
                             <li>
                                 <a href="list.html">货物单列表</a>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <a href="javascript: void(0);">
-                            <i class="dripicons-map"></i>
-                            <span> Maps </span>
-                            <span class="menu-arrow"></span>
-                        </a>
-                        <ul class="nav-second-level" aria-expanded="false">
-                            <li>
-                                <a href="maps-google.html">Google Maps</a>
-                            </li>
-                            <li>
-                                <a href="maps-vector.html">Vector Maps</a>
-                            </li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <a href="javascript: void(0);">
-                            <i class="dripicons-star"></i>
-                            <span> Icons </span>
-                            <span class="menu-arrow"></span>
-                        </a>
-                        <ul class="nav-second-level" aria-expanded="false">
-                            <li>
-                                <a href="icons-simpleline.html">Simple Line</a>
-                            </li>
-                            <li>
-                                <a href="icons-dripicons.html">Dripicons</a>
-                            </li>
-                            <li>
-                                <a href="icons-materialdesign.html">Material Design</a>
-                            </li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <a href="javascript: void(0);">
-                            <i class="dripicons-user"></i>
-                            <span> Authentication </span>
-                            <span class="menu-arrow"></span>
-                        </a>
-                        <ul class="nav-second-level" aria-expanded="false">
-                            <li><a href="auth-login.html">Log In</a></li>
-                            <li><a href="auth-register.html">Register</a></li>
-                            <li><a href="auth-recoverpassword.html">Recover Password</a></li>
-                            <li><a href="auth-lock-screen.html">Lock Screen</a></li>
-                            <li><a href="auth-404.html">Error 404</a></li>
-                            <li><a href="auth-500.html">Error 500</a></li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <a href="javascript: void(0);">
-                            <i class="dripicons-duplicate"></i>
-                            <span> Extra Pages </span>
-                            <span class="menu-arrow"></span>
-                        </a>
-                        <ul class="nav-second-level" aria-expanded="false">
-                            <li><a href="pages-pricing.html">Pricing</a></li>
-                            <li><a href="pages-starter.html">Starter</a></li>
-                            <li><a href="pages-invoice.html">Invoice</a></li>
-                            <li><a href="pages-timeline.html">Timeline</a></li>
-                            <li><a href="pages-faq.html">FAQs</a></li>
-                        </ul>
-                    </li>
-
-                    <li>
-                        <a href="javascript: void(0);">
-                            <i class="dripicons-network-3"></i>
-                            <span> Multi Level </span>
-                            <span class="menu-arrow"></span>
-                        </a>
-                        <ul class="nav-second-level nav" aria-expanded="false">
-                            <li>
-                                <a href="javascript: void(0);">Menu 1</a>
-                            </li>
-                            <li>
-                                <a href="javascript: void(0);" aria-expanded="false">Menu 2
-                                    <span class="menu-arrow"></span>
-                                </a>
-                                <ul class="nav-third-level nav" aria-expanded="false">
-                                    <li>
-                                        <a href="javascript: void(0);">Menu 2.1</a>
-                                    </li>
-                                    <li>
-                                        <a href="javascript: void(0);">Menu 2.2</a>
-                                    </li>
-                                </ul>
                             </li>
                         </ul>
                     </li>
@@ -531,8 +262,6 @@
                         <div class="page-title-box">
                             <div class="page-title-right">
                                 <ol class="breadcrumb m-0">
-                                    <li class="breadcrumb-item"><a href="javascript: void(0);">Dashoon</a></li>
-                                    <li class="breadcrumb-item"><a href="javascript: void(0);">Tables</a></li>
                                     <li class="breadcrumb-item active">货物单列表</li>
                                 </ol>
                             </div>
